[package]
name = "building_seven"
version = "0.1.0"
authors = ["Alex Eyre <alex@turm.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nickel]
version = "*"
rustc-serialize = "*"
features = ["unstable"]

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
chrono = "0.4.0"
uuid = "0.8.1"
fern = "0.5.9"
log = "0.4.8"
