[package]
name = "building_seven"
version = "1.0.0"
authors = ["Alex Eyre <alex@turm.pw>", "Kajetan Champlewski <kajetan@kch.dev>", "Daniel Goje <gojedan98@gmail.com>", "Ioana Simion <ioanasimioni@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
chrono = "0.4.0"
uuid = "0.8.1"
fern = "0.5.9"
log = "0.4.8"
hyper = "*"
nickel = "*"
